# docops-mcp-assistant

./: .env  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_all.bat  run_all.sh
app/: main.py
app/agent/: agent.py  prompts.py  workflows.py
app/config/: projects.yaml  settings.py
app/core/: llm.py  logging.py  models.py  storage.py
app/mcp_client/: client.py  confluence_tools.py  git_tools.py  vector_tools.py
app/ui/: callbacks.py  components.py  layouts.py
mcp-servers/confluence-mcp-server/: pyproject.toml
mcp-servers/confluence-mcp-server/mcp_confluence/: api_client.py  server.py  utils.py
mcp-servers/confluence-mcp-server/tests/: test_confluence_server.py
mcp-servers/git-mcp-server/: pyproject.toml
mcp-servers/git-mcp-server/mcp_git/: github_client.py  server.py  utils.py
mcp-servers/git-mcp-server/tests/: test_git_server.py
mcp-servers/vector-mcp-server/: pyproject.toml
mcp-servers/vector-mcp-server/mcp_vector/: server.py  store.py
mcp-servers/vector-mcp-server/tests/: test_vector_server.py
scripts/: dev_tools.py  run_app.py  seed_demo_data.py  seed_projects.py
tests/: test_agent_flows.py  test_mcp_integration.py  test_ui_smoke.py
