[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "confluence-mcp-server"
version = "0.1.0"
description = "MCP server for Confluence integration"
authors = [{ name = "Your Name" }]
requires-python = ">=3.10"

dependencies = [
    "httpx>=0.25.0",
]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
confluence-mcp-server = "mcp_confluence.server:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]