[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vector-mcp-server"
version = "0.1.0"
description = "MCP server providing vector-like document store (JSONL-based)"
authors = [{ name = "Your Name" }]
requires-python = ">=3.10"

dependencies = [
    "httpx>=0.25.0"
]

[tool.setuptools.packages.find]
where = ["mcp_vector"]

[project.scripts]
vector-mcp-server = "mcp_vector.server:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]